style: cleanup